# workout

./: database.db  pyproject.toml
src/: __main__.py  config.py  dto.py
src/api/: __init__.py  _deps.py  _security.py
src/api/v1/: __init__.py  exercises.py  plans.py  users.py
src/api/views/: __init__.py  exercises.py  plans.py  users.py
src/core/: typings.py
src/core/enums/: pages.py  system.py
src/db/: __init__.py  _base.py
src/db/cruds/: users.py  workout.py
src/db/models/: users.py  workout.py
src/templates/: 401.html  404.html  500.html  base.html  index.html
src/templates/users/: login.html  profile.html  signup.html
src/templates/workout/: create_exercise.html  create_plan.html  day.html  exercise.html  exercises.html  list_plans.html  plan.html
